Fix: loadingsvg z-index

--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -5328,7 +5328,7 @@ a.badge-danger.focus {
 #loadingsvg {
   position: fixed;
   display: none;
-  z-index: 1050;
+  z-index: 1060;
   width: 100%;
   height: 100%;
   top: 0;
